--- a/.gitignore
+++ b/.gitignore
@@ -267,5 +267,6 @@ pyrightconfig.json
 pyburger/.idea
 membership/.idea
 pylog/.idea
+pystagram/.idea
 
 # End of https://www.toptal.com/developers/gitignore/api/django,python
