--- a/pystagram/pyproject.toml
+++ b/pystagram/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.10"
 django = "^5.0.6"
 pillow = "^10.3.0"
+django-admin-thumbnails = "^0.2.9"
 
 
 [build-system]
