--- a/membership/pyproject.toml
+++ b/membership/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 django = "^5.0.6"
 jupyter = "^1.0.0"
 djangorestframework = "^3.15.1"
+djangorestframework-simplejwt = "^5.3.1"
 
 
 [build-system]
