--- a/membership/pyproject.toml
+++ b/membership/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.0.6"
 jupyter = "^1.0.0"
 djangorestframework = "^3.15.1"
 djangorestframework-simplejwt = "^5.3.1"
+django-storages = "^1.14.3"
 
 
 [build-system]
