--- a/django-youtube-restapi-project/.gitignore
+++ b/django-youtube-restapi-project/.gitignore
@@ -1,72 +1,57 @@
-# Django #
-*.log
-*.pot
-*.pyc
-__pycache__
-db.sqlite3
-media
+# Created by https://www.gitignore.io
 
-# Backup files #
-*.bak
+### OSX ###
+.DS_Store
+.AppleDouble
+.LSOverride
 
-# If you are using PyCharm #
-# User-specific stuff
-.idea/
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
+# Icon must end with two \r
+Icon
 
-# AWS User-specific
-.idea/**/aws.xml
 
-# Generated files
-.idea/**/contentModel.xml
+# Thumbnails
+._*
 
-# Sensitive or high-churn files
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
-.idea/**/dbnavigator.xml
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
 
-# Gradle
-.idea/**/gradle.xml
-.idea/**/libraries
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
 
-# File-based project format
-*.iws
 
-# IntelliJ
-out/
-
-# JIRA plugin
-atlassian-ide-plugin.xml
-
-# Python #
+### Python ###
+# Byte-compiled / optimized / DLL files
+__pycache__/
 *.py[cod]
-*$py.class
+
+# C extensions
+*.so
 
 # Distribution / packaging
-.Python build/
+.Python
+env/
+build/
 develop-eggs/
 dist/
 downloads/
 eggs/
-.eggs/
 lib/
 lib64/
 parts/
 sdist/
 var/
-wheels/
-*.whl
 *.egg-info/
 .installed.cfg
 *.egg
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
 
@@ -78,62 +63,27 @@ pip-delete-this-directory.txt
 htmlcov/
 .tox/
 .coverage
-.coverage.*
 .cache
-.pytest_cache/
 nosetests.xml
 coverage.xml
-*.cover
-.hypothesis/
 
-# Jupyter Notebook
-.ipynb_checkpoints
+# Translations
+*.mo
+*.pot
 
-# pyenv
-.python-version
+# Sphinx documentation
+docs/_build/
 
-# celery
-celerybeat-schedule.*
+# PyBuilder
+target/
 
-# SageMath parsed files
-*.sage.py
 
-# Environments
+### Django ###
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+
 .env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-
-# Sublime Text #
-*.tmlanguage.cache
-*.tmPreferences.cache
-*.stTheme.cache
-*.sublime-workspace
-*.sublime-project
-
-# sftp configuration file
-sftp-config.json
-
-# Package control specific files Package
-Control.last-run
-Control.ca-list
-Control.ca-bundle
-Control.system-ca-bundle
-GitHub.sublime-settings
-
-# Visual Studio Code #
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history
+db.sqlite3
